--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-native": "0.46.4",
     "react-native-deprecated-custom-components": "^0.1.1",
     "react-native-easy-toast": "^1.0.6",
+    "react-native-image-zoom-viewer": "^2.0.9",
     "react-native-toast-easy": "^1.0.4",
+    "react-native-transformable-image": "0.0.18",
     "react-navigation": "^1.0.0-beta.11"
   },
   "devDependencies": {
